checking with directory

--- a/codeCheckPipeline.yaml
+++ b/codeCheckPipeline.yaml
@@ -18,6 +18,31 @@ steps:
 - script: echo $(githubPat)
   displayName: 'Run a one-line script'
 
+
+  jobs:
+- job: PowerShellJob
+  steps:
+  - powershell: |
+      # Set the working directory to the Agent.BuildDirectory
+      $workingDirectory = "$(Agent.BuildDirectory)"
+      Set-Location -Path $workingDirectory
+
+      # Check the current working directory
+      Write-Host "Current working directory: $PWD"
+  displayName: 'Set Working Directory'
+  continueOnError: true # Continue on error to ensure the directory is set
+
+- job: RunYourTasks
+  dependsOn: PowerShellJob
+  steps:
+  - task: PowerShell@2
+    displayName: 'Run Your PowerShell Script'
+    inputs:
+      targetType: 'inline'
+      script: |
+        # Your PowerShell script here
+        Write-Host "Executing script in the working directory: $PWD"
+
 - powershell: |
     $fullSourceVersion  = "$(Build.SourceVersion)"
     $sourceVersion = $fullSourceVersion.Substring(0, 7)
@@ -43,11 +68,8 @@ steps:
   inputs:
     targetType: filePath
     filePath: './Scripts/validator.ps1'
-    arguments: '-pull_number $(System.PullRequest.PullRequestNumber) -YOUR_PERSONAL_ACCESS_TOKEN $($env:GITHUB_PAT) -GptApiKey $($env:GptApiKey)'
-  env:
-    pull_number: $(pull_number)
-    GITHUB_PAT: $(githubPat)
-    GptApiKey: $(openAiGptPat) # Replace this with the relative path to your script in the repository
+    arguments: '-pull_number $(System.PullRequest.PullRequestNumber) -YOUR_PERSONAL_ACCESS_TOKEN $(githubPat) -GptApiKey $(openAiGptPat)'
+
 
 - task: CmdLine@2
   condition: eq(variables['Build.Reason'], 'PullRequest')
