updated code to azure pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,12 +1,10 @@
 trigger:
   branches:
     exclude:
-    - '*'  # Exclude pushes to all branches.
+    - main
   paths:
     exclude:
-    - '*'  # Exclude changes to all files.
-  pr:
-    - 'main'  # Trigger the pipeline when there is a pull request targeting the 'main' branch.
+    - '*'
 
 pool:
   name: CloudVM
