updated code to azure pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,8 @@ pool:
 
 variables:
   currentDirectory: '$(System.DefaultWorkingDirectory)'
+  githubPat: $(githubPat)  # Map the githubPat variable from the library.
+  openAiGptPat: $(openAiGptPat)  # Map the openAiGptPat variable from the library.
   # Define a pipeline variable 'currentDirectory' and set it to the default working directory.
 
 jobs:
