--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,40 +8,19 @@ trigger:
 
 pool:
   name: CloudVM
-  # Specify the agent pool named 'CloudVM' for job execution.
 
 variables:
   currentDirectory: '$(System.DefaultWorkingDirectory)'
-  # Define a pipeline variable 'currentDirectory' and set it to the default working directory.
 
 jobs:
 - job: executeRepositoryScript
   condition: eq(variables['Build.Reason'], 'PullRequest')
-  # Define a job named 'executeRepositoryScript' that runs only when the build reason is a pull request.
-
   displayName: 'Execute Repository PowerShell Script'
-  # Provide a human-readable name for the job.
-
   steps:
-  - script: echo "Debug: Print all available environment variables"
-      displayName: 'Debug: Print Environment Variables'
-      env:
-        ALL_VARIABLES_JSON: $(Agent.JobStatus)
-  - script: echo $(ALL_VARIABLES_JSON)
-    displayName: 'Debug: Actual Value of ALL_VARIABLES_JSON'
-  # - script: echo $(githubPat)  # Uncomment this line cautiously. It will expose the PAT in logs.
-  # - script: echo $(openAiGptPat)  # Uncomment this line cautiously. It will expose the API Key in logs.
-  - script: echo $(currentDirectory)
-    displayName: 'Debug: Print currentDirectory'
-
+  - script: echo $(githubPat)
+  - script: echo $(openAiGptPat)
   - task: PowerShell@2
     inputs:
       targetType: filePath
       filePath: './Scripts/validator.ps1'
-      # Run a PowerShell script file located at './Scripts/validator.ps1'.
-
       arguments: '-pull_number $(System.PullRequest.PullRequestNumber) -YOUR_PERSONAL_ACCESS_TOKEN $(githubPat) -GptApiKey $(openAiGptPat) -currentDirectory "$(currentDirectory)"'
-      # Pass command-line arguments to the PowerShell script. Placeholders like $(System.PullRequest.PullRequestNumber), $(githubPat), and $(openAiGptPat) will be replaced with actual values during execution.
-      # Also, include the current working directory as an argument.
-
-      # This YAML code sets up a job that executes a PowerShell script when triggered by a pull request.
