John Wick WI5 Update
John Wick WI5 Update

--- a/SourceCode/2023/Sep2023/Projects/Yannick/ACME_Work_Item_5/project.json
+++ b/SourceCode/2023/Sep2023/Projects/Yannick/ACME_Work_Item_5/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "ACME_Work_Item_5",
+  "name": "ACME_Work_Item5",
   "projectId": "27f1796d-871d-4f99-a52c-8b654349d130",
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
