--- a/SourceCode/2023/Sep2023/Basics/Chandupriya/Task_5/project.json
+++ b/SourceCode/2023/Sep2023/Basics/Chandupriya/Task_5/project.json
@@ -4,11 +4,7 @@
   "description": "Add two different Variable types and do the Add in final variable(by using Generic Variable type)",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.22.0-preview]",
-    "UiPath.Mail.Activities": "[1.20.3]",
-    "UiPath.System.Activities": "[23.8.1-preview]",
-    "UiPath.Testing.Activities": "[23.8.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.2-preview]"
+    "UiPath.System.Activities": "[23.8.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
