--- a/SourceCode/2023/Sep2023/Projects/Deekshitha/Database/project.json
+++ b/SourceCode/2023/Sep2023/Projects/Deekshitha/Database/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "AcmeWorkItem5",
-  "projectId": "d7e840ac-f624-4f06-812a-9864e96b1744",
-  "description": "Robotic Enterprise Framework",
+  "name": "Database",
+  "projectId": "aceadfba-bea4-4cb8-8cc5-66de1642d500",
+  "description": "Robotic Enterprise Framework (Databse)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Database.Activities": "[1.7.1]",
@@ -14,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.8.0.0",
-  "projectVersion": "1.0.2",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -46,42 +46,42 @@
     "fileInfoCollection": [
       {
         "editingStatus": "InProgress",
-        "testCaseId": "99047adf-5eec-4520-9822-883e436d2b2d",
+        "testCaseId": "5e03bf89-381d-4881-bcda-6bcc44faac4a",
         "testCaseType": "TestCase",
         "executionTemplateType": "Local",
         "fileName": "Tests\\GetTransactionDataTestCase.xaml"
       },
       {
         "editingStatus": "InProgress",
-        "testCaseId": "1a95f7a8-ae4f-43dd-b714-869e76054953",
+        "testCaseId": "c7d4f4bb-3ce6-412e-90fb-c6978e83593c",
         "testCaseType": "TestCase",
         "executionTemplateType": "Local",
         "fileName": "Tests\\InitAllApplicationsTestCase.xaml"
       },
       {
         "editingStatus": "InProgress",
-        "testCaseId": "f52ec724-93d4-4a08-96d6-395f0796c466",
+        "testCaseId": "9ceb192f-ae6d-4f68-aa53-b69f8a70e3f9",
         "testCaseType": "TestCase",
         "executionTemplateType": "Local",
         "fileName": "Tests\\InitAllSettingsTestCase.xaml"
       },
       {
         "editingStatus": "InProgress",
-        "testCaseId": "0e21e6a7-ee79-4cd5-a5a0-e4f59540744b",
+        "testCaseId": "f1b865fd-5383-4875-8546-929925acf2d5",
         "testCaseType": "TestCase",
         "executionTemplateType": "Local",
         "fileName": "Tests\\MainTestCase.xaml"
       },
       {
         "editingStatus": "InProgress",
-        "testCaseId": "b7e90a54-431c-4231-a466-14e49f755840",
+        "testCaseId": "984e302c-807f-4293-9bea-fdfc71333539",
         "testCaseType": "TestCase",
         "executionTemplateType": "Local",
         "fileName": "Tests\\ProcessTestCase.xaml"
       },
       {
         "editingStatus": "InProgress",
-        "testCaseId": "cf641809-ac02-4261-9632-c49d528e843d",
+        "testCaseId": "e9a4f6a3-f6fd-48fc-a571-7fd67915b8ac",
         "testCaseType": "TestCase",
         "executionTemplateType": "Local",
         "fileName": "Tests\\WorkflowTestCaseTemplate.xaml"
@@ -93,7 +93,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0cf808ff-d1ad-4a80-8e0d-c48ddd8d7a76",
+      "uniqueId": "fef6bc12-2b4a-47a7-a798-959f126cd147",
       "input": [],
       "output": []
     }
