--- a/SourceCode/2023/Sep2023/Projects/Vajrang/RoboticEnterpriseFramework12/project.json
+++ b/SourceCode/2023/Sep2023/Projects/Vajrang/RoboticEnterpriseFramework12/project.json
@@ -4,10 +4,10 @@
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.22.0-preview]",
-    "UiPath.System.Activities": "[23.8.1-preview]",
-    "UiPath.Testing.Activities": "[23.8.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.6.2-preview]"
+    "UiPath.Excel.Activities": "[2.20.3]",
+    "UiPath.System.Activities": "[23.4.4]",
+    "UiPath.Testing.Activities": "[23.4.1]",
+    "UiPath.UIAutomation.Activities": "[23.4.8]"
   },
   "webServices": [],
   "entitiesStores": [],
