--- a/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Example/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Example/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_31",
-  "projectId": "53de7a9d-606b-41da-8a99-60b1861a5b4a",
-  "description": "Get Password for the emails and display first 5 emails by using for each",
+  "name": "Example",
+  "projectId": "e2619cff-c342-472c-aee9-02408f472e1f",
+  "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.1-preview]",
@@ -44,14 +44,14 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": false,
+    "modernBehavior": true,
     "saveToCloud": false
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "6a562b8d-4d0a-4d73-93f4-b9af15191d80",
+      "uniqueId": "f4b543b8-c4a3-4f5b-a4ff-1ef98687979f",
       "input": [],
       "output": []
     }
