--- a/SourceCode/2023/Oct2023/Basics/SachinRawal/Task2/project.json
+++ b/SourceCode/2023/Oct2023/Basics/SachinRawal/Task2/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task2",
-  "projectId": "1ebe7189-d199-4929-959d-f87a543c4c12",
+  "name": "Welcome Message",
+  "projectId": "1e14893e-4cbe-4561-b459-7bd03a50659e",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "c2bdd681-ffe1-4b4f-897f-bb9e5d0ee5cf",
+      "uniqueId": "62415322-06bf-4680-a28f-f867b175bc89",
       "input": [],
       "output": []
     }
