--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task3/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task3/project.json
@@ -1,12 +1,9 @@
 {
-  "name": "test",
+  "name": "Task3",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.12.3]",
-    "UiPath.Mail.Activities": "[1.15.1]",
-    "UiPath.System.Activities": "[22.4.0]",
-    "UiPath.UIAutomation.Activities": "[22.4.2-preview]"
+    "UiPath.Word.Activities": "[1.18.0-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -46,7 +43,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "a510d1e1-2cfd-429d-a141-d8318c3af086",
+      "uniqueId": "7e51016e-887f-4083-91da-9db860499dba",
       "input": [],
       "output": []
     }
