--- a/SourceCode/2023/Oct2023/Basics/Nihar/Task_3/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nihar/Task_3/project.json
@@ -4,9 +4,8 @@
   "description": "Task_3",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.System.Activities": "[23.4.5]",
+    "UiPath.Testing.Activities": "[23.4.1]"
   },
   "webServices": [],
   "entitiesStores": [],
