--- a/SourceCode/2023/oct2023/Basics/Praveenraja S V/TASK2/project.json
+++ b/SourceCode/2023/oct2023/Basics/Praveenraja S V/TASK2/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task2",
-  "projectId": "1ebe7189-d199-4929-959d-f87a543c4c12",
+  "name": "TASK2",
+  "projectId": "2e0df2ad-a0a5-48bb-8e64-2ac993ed6250",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "c2bdd681-ffe1-4b4f-897f-bb9e5d0ee5cf",
+      "uniqueId": "ac9c0cad-ffb5-491a-a3a1-e30e3362e138",
       "input": [],
       "output": []
     }
