--- a/SourceCode/2023/Oct2023/Basics/karunakar/activity1/project.json
+++ b/SourceCode/2023/Oct2023/Basics/karunakar/activity1/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task2",
-  "projectId": "1ebe7189-d199-4929-959d-f87a543c4c12",
+  "name": "activity1",
+  "projectId": "cc2c08be-add1-40ae-98e6-f203f8b72bd1",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "c2bdd681-ffe1-4b4f-897f-bb9e5d0ee5cf",
+      "uniqueId": "7bbc5155-2e24-4a02-ba80-9f1709d7bb9c",
       "input": [],
       "output": []
     }
