--- a/SourceCode/2023/Oct2023/Basics/karunakar/task3/project.json
+++ b/SourceCode/2023/Oct2023/Basics/karunakar/task3/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task2",
-  "projectId": "1ebe7189-d199-4929-959d-f87a543c4c12",
+  "name": "task3",
+  "projectId": "d2ef20bd-d651-49fe-bb34-faa1a57078aa",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "c2bdd681-ffe1-4b4f-897f-bb9e5d0ee5cf",
+      "uniqueId": "1885c6ec-cf62-4936-834c-0f5fcc84ffce",
       "input": [],
       "output": []
     }
