--- a/SourceCode/2023/Oct2023/Basics/Nihar/Task_3-class/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nihar/Task_3-class/project.json
@@ -1,12 +1,12 @@
 {
   "name": "Task_3",
-  "projectId": "ebf34492-6470-4bad-adfc-bc571a1bc082",
+  "projectId": "604cd688-e427-47d3-a1c5-525bdfaa1106",
   "description": "Task_3",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.System.Activities": "[23.4.5]",
+    "UiPath.Testing.Activities": "[23.4.1]",
+    "UiPath.Workflow.Runtime": "[6.0.3]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "eaa03230-7a4d-4f71-92af-f400940238b8",
+      "uniqueId": "215de367-a75b-4152-be3c-a946fb60bd28",
       "input": [],
       "output": []
     }
