--- a/SourceCode/2023/Oct2023/Basics/Nihar/Task_4_LeapYear/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nihar/Task_4_LeapYear/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_3",
-  "projectId": "ebf34492-6470-4bad-adfc-bc571a1bc082",
-  "description": "Task_3",
+  "name": "Task_4_LeapYear",
+  "projectId": "bd5a03d2-eda9-480b-9936-a769240f288f",
+  "description": "Task_4_LeapYear",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.0-preview]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "eaa03230-7a4d-4f71-92af-f400940238b8",
+      "uniqueId": "6a30862d-6316-403f-96b3-477d09daf210",
       "input": [],
       "output": []
     }
