--- a/SourceCode/2023/Oct2023/Basics/Nihar/Task_2/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nihar/Task_2/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task_2",
-  "projectId": "075f5884-7186-49c0-9fcb-25a7abd91798",
-  "description": "Task_2",
+  "projectId": "1cdf1a9e-5684-43eb-9d6a-5c956dd16737",
+  "description": "Addition of two Numbers (based on input dailogebox and Variables) (Addition, Substraction and multiplications)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.0-preview]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "010486b9-737d-47a8-a4af-591aa45074b0",
+      "uniqueId": "6704c8c2-5932-4d32-a447-d23f127819c2",
       "input": [],
       "output": []
     }
