--- a/SourceCode/2023/Oct2023/Basics/Nihar/Task_1/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nihar/Task_1/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task_1",
-  "projectId": "602b1882-30e1-46b1-9651-3910e245fd3c",
-  "description": "Task_1",
+  "projectId": "ceb26b29-11ac-46ea-abb4-a258d9e65c94",
+  "description": "Add Input Dialog Box and give the input then Add Message box to display a message ",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.0-preview]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "1d0a57a0-15af-46f0-acbf-24b295b251f6",
+      "uniqueId": "5a4158d7-6e7f-4519-9a15-adeadce7bb95",
       "input": [],
       "output": []
     }
