--- a/SourceCode/2023/oct2023/Basics/Praveenraja S V/Task_5/project.json
+++ b/SourceCode/2023/oct2023/Basics/Praveenraja S V/Task_5/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task3",
-  "projectId": "235895c0-25e6-4675-982f-3116e0713f07",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task_5",
+  "projectId": "bfbb8ce9-f379-4e69-a98e-0f13ba15dd84",
+  "description": "Add two different Variable types and do the Add in final variable(by using Generic Variable type)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.1-preview]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "29ab1b71-a578-430a-90d8-13aa1da1b77c",
+      "uniqueId": "89c6ec55-44e7-4a51-ba84-ba17ca103b4e",
       "input": [],
       "output": []
     }
