--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task7/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task7/project.json
@@ -1,9 +1,12 @@
 {
-  "name": "Task6",
-  "description": "Assign Fruits/Colors",
+  "name": "Task7",
+  "description": "Assign multiple values numbers(array)",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]"
+    "UiPath.Excel.Activities": "[2.12.3]",
+    "UiPath.Mail.Activities": "[1.15.1]",
+    "UiPath.System.Activities": "[22.4.0]",
+    "UiPath.UIAutomation.Activities": "[22.4.2-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -43,7 +46,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f8a5427b-8fa8-4070-99a7-2076821a5f3a",
+      "uniqueId": "ce3a1864-2b87-4907-8c46-0e2c77f4238d",
       "input": [],
       "output": []
     }
