--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task7/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task7/project.json
@@ -3,10 +3,7 @@
   "description": "Assign multiple values numbers(array)",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.12.3]",
-    "UiPath.Mail.Activities": "[1.15.1]",
-    "UiPath.System.Activities": "[22.4.0]",
-    "UiPath.UIAutomation.Activities": "[22.4.2-preview]"
+    "UiPath.System.Activities": "[22.4.0]"
   },
   "webServices": [],
   "entitiesStores": [],
