--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task8/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task8/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task7",
-  "description": "Assign multiple numbers(array)",
+  "name": "Task8",
+  "description": "Assign multiple Names (array)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[22.4.0]"
@@ -43,7 +43,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "a693d2f8-7fc8-4f5d-9c6c-afd3355a1dca",
+      "uniqueId": "ea32df12-b5c6-4302-96ef-cc42adf5fc39",
       "input": [],
       "output": []
     }
