--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task9/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task9/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task7",
-  "description": "Assign multiple numbers(array)",
+  "name": "Task9",
+  "description": "Use Inputdialog box and store in Array",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[22.4.0]"
@@ -43,7 +43,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "a693d2f8-7fc8-4f5d-9c6c-afd3355a1dca",
+      "uniqueId": "fcfdfee2-4571-4e89-9741-455a402dfb28",
       "input": [],
       "output": []
     }
