--- a/SourceCode/2023/Oct2023/Basics/Sudheer Devabattula/Task05/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sudheer Devabattula/Task05/project.json
@@ -1,12 +1,10 @@
 {
-  "name": "Test0",
-  "projectId": "bbb4346e-d414-4201-896a-5b048e2bb7ce",
-  "description": "Testing Project",
+  "name": "Task05",
+  "projectId": "8be9e127-b03b-4945-8576-293dcb4adbeb",
+  "description": "Add two diff variables",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.System.Activities": "[23.10.0-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +47,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "21cd3c60-3e19-4436-93d9-b3432841a22e",
+      "uniqueId": "ee0e2bdb-9283-49a2-b2d5-a9be097e0e5d",
       "input": [],
       "output": []
     }
