--- a/SourceCode/2023/Oct2023/Basics/Sudheer Devabattula/Task06/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sudheer Devabattula/Task06/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task04",
-  "projectId": "62a85b0f-dee7-4f60-ad63-022caf584c05",
-  "description": "LeapYear",
+  "name": "Task06",
+  "projectId": "07f84ff8-0dfa-4ce0-8616-5ef6cf5f6d26",
+  "description": "write in Appendline",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.0-preview]"
@@ -47,7 +47,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "a49e6e25-6193-4604-9d65-f4dc3a6de61b",
+      "uniqueId": "c3a472b8-19b8-40d4-8390-a44ebab908bb",
       "input": [],
       "output": []
     }
