--- a/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task13/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task13/project.json
@@ -1,9 +1,10 @@
 {
-  "name": "Task4",
-  "projectId": "418b8eb4-68dd-4823-8e94-148f7548a3af",
+  "name": "Task13",
+  "projectId": "ed4c477a-564e-4933-b07e-da5326736ad6",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.1-preview]",
     "UiPath.System.Activities": "[23.10.0-preview]",
     "UiPath.Testing.Activities": "[23.10.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
@@ -49,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0f3e36f6-cc2e-4654-970d-aa4e605798b6",
+      "uniqueId": "7a161eef-4bfa-4048-8481-3d4c5fad8cf8",
       "input": [],
       "output": []
     }
