--- a/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task1/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task1/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task4",
-  "projectId": "418b8eb4-68dd-4823-8e94-148f7548a3af",
-  "description": "Blank Process",
+  "name": "Task1",
+  "projectId": "c506f94b-8a48-4983-81bd-7baee7422fe8",
+  "description": "Input dialog &display message",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.1-preview]",
+    "UiPath.Mail.Activities": "[1.20.3]",
     "UiPath.System.Activities": "[23.10.0-preview]",
     "UiPath.Testing.Activities": "[23.10.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0f3e36f6-cc2e-4654-970d-aa4e605798b6",
+      "uniqueId": "0cabd353-cc0e-4149-bd01-9addb01c9a0b",
       "input": [],
       "output": []
     }
