--- a/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task6/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task6/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task4",
-  "projectId": "418b8eb4-68dd-4823-8e94-148f7548a3af",
-  "description": "Blank Process",
+  "name": "Task6",
+  "projectId": "1cdb1729-afa8-4ea3-9d72-010bc98d2688",
+  "description": "(Assign the values(Fruits/colors) and write in Text file or Append the line",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.0-preview]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0f3e36f6-cc2e-4654-970d-aa4e605798b6",
+      "uniqueId": "277eadda-0ecf-4ced-9afa-48e60a7de9af",
       "input": [],
       "output": []
     }
