--- a/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task7/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Padmavathykarra/Task7/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task4",
-  "projectId": "418b8eb4-68dd-4823-8e94-148f7548a3af",
-  "description": "Blank Process",
+  "name": "Task7",
+  "projectId": "d64f2bf4-6d04-4158-8917-afbeed5221e5",
+  "description": "Assign Multiple values (Numbers) and display in the messagebox through index",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.0-preview]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0f3e36f6-cc2e-4654-970d-aa4e605798b6",
+      "uniqueId": "336214c5-b3ca-48e7-b594-f2cdc84eb542",
       "input": [],
       "output": []
     }
