--- a/SourceCode/2023/Oct2023/Yuvaraj/project.json
+++ b/SourceCode/2023/Oct2023/Yuvaraj/project.json
@@ -4,10 +4,8 @@
   "description": "Robotic Enterprise Framework",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.DataService.Activities": "23.4.1",
-    "UiPath.DropboxBusiness.IntegrationService.Activities": "5.0.0",
-    "UiPath.Excel.Activities": "[2.22.1-preview]",
-    "UiPath.System.Activities": "[23.10.0-preview]",
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.System.Activities": "[23.10.1]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
   },
@@ -88,8 +86,7 @@
         "fileName": "Tests\\WorkflowTestCaseTemplate.xaml"
       }
     ],
-    "modernBehavior": true,
-    "saveToCloud": false
+    "modernBehavior": true
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
