--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task14/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task14/project.json
@@ -1,10 +1,11 @@
 {
-  "name": "Task17",
-  "description": "Generate Datatable from Text",
+  "name": "Task14",
+  "description": "Extract the data from vajrang.org",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.12.3]",
-    "UiPath.System.Activities": "[22.4.0]"
+    "UiPath.System.Activities": "[22.4.0]",
+    "UiPath.UIAutomation.Activities": "[22.4.2-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -44,7 +45,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "23ecb0ed-7a16-4d5f-9aba-2e05047ac2fe",
+      "uniqueId": "451e9309-9da4-4f18-8b13-1a2f71c88507",
       "input": [],
       "output": []
     }
