--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task15/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task15/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task17",
-  "description": "Generate Datatable from Text",
+  "name": "Task15",
+  "description": "Concat the Names",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.12.3]",
@@ -44,7 +44,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "23ecb0ed-7a16-4d5f-9aba-2e05047ac2fe",
+      "uniqueId": "55648297-fafe-43ca-8e0f-3199730db887",
       "input": [],
       "output": []
     }
