--- a/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task16/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Sruthilaya/Task16/project.json
@@ -1,6 +1,6 @@
 {
-  "name": "Task17",
-  "description": "Generate Datatable from Text",
+  "name": "Task16",
+  "description": "Build Datatable and write to Excel",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.12.3]",
@@ -44,7 +44,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "23ecb0ed-7a16-4d5f-9aba-2e05047ac2fe",
+      "uniqueId": "9dcba37c-df6b-467d-bcde-6427db49ba3b",
       "input": [],
       "output": []
     }
