--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task17/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task17/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task15",
-  "projectId": "79c65344-2f3f-499b-943b-cef4c684598b",
-  "description": "Concatinate the first Name, Middle Name, Last Name from the input excel and write the results into full Name column",
+  "name": "Task17",
+  "projectId": "118ba483-c46d-4b30-84da-be20d751b8e0",
+  "description": "Generate Data Table from txt file",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.1-preview]",
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "bc950487-155c-47dc-9db5-d13aec22dced",
+      "uniqueId": "a4e0aa51-09b1-43a8-bb16-33b5706f235d",
       "input": [],
       "output": []
     }
