--- a/SourceCode/2023/Oct2023/Basics/Nihar/Task_10/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nihar/Task_10/project.json
@@ -5,8 +5,7 @@
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.Testing.Activities": "[23.10.0-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
