--- a/SourceCode/2023/Oct2023/Basics/Nihar/Task_11/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nihar/Task_11/project.json
@@ -1,11 +1,14 @@
 {
-  "name": "Task_10",
-  "projectId": "20c63171-041e-4bd4-8a94-860df1e86a04",
-  "description": "Add the Multiple choices of weekdays.\r\nBased on user selection from 1 to 7, the message needs to be displayed (Do the task in Sequence) ",
+  "name": "Task_11",
+  "projectId": "6c3e85cb-a41b-4017-ae2f-fdc54f3dd8e5",
+  "description": "Based on user selection from Words like fruits, vegetables , the message needs to be displayed ( flowchart) ",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.1-preview]",
+    "UiPath.Mail.Activities": "[1.20.3]",
     "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]"
+    "UiPath.Testing.Activities": "[23.10.0-preview]",
+    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -48,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "fe23bd5d-27b5-44b4-8a07-c8defa7d2f5c",
+      "uniqueId": "cbd8d788-6be7-4a6c-b9b1-360d3616a1a3",
       "input": [],
       "output": []
     }
