Task Numbers -18,19,20,21 are Completed
Please Check The Code of Task Numbers 18,19,20,21.

--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task19/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task19/project.json
@@ -1,10 +1,9 @@
 {
-  "name": "Task20",
-  "projectId": "c76666d1-c5d4-4266-8060-41143d9829ef",
-  "description": "Read the excel (consists of Lower Letters), and type into website (Vajrang.org - Uppercase Task) and get the result and write into one excel",
+  "name": "Task19",
+  "projectId": "442204be-71e6-468a-b7ff-5232e4a16a85",
+  "description": "Extract the data from any website and write into Text File",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.22.1-preview]",
     "UiPath.System.Activities": "[23.10.0-preview]",
     "UiPath.Testing.Activities": "[23.10.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
@@ -50,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "596e039a-abc1-4c41-8992-cf0501573364",
+      "uniqueId": "76135b5b-5a0a-4527-a9a0-0183b5d64cd5",
       "input": [],
       "output": []
     }
