--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task21/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task21/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task20",
-  "projectId": "c76666d1-c5d4-4266-8060-41143d9829ef",
-  "description": "Read the excel (consists of Lower Letters), and type into website (Vajrang.org - Uppercase Task) and get the result and write into one excel",
+  "name": "Task21",
+  "projectId": "cb33b972-dbe7-46cb-a813-346d762f7270",
+  "description": "Find the temperature of few cities and print the results into Excel",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.1-preview]",
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "596e039a-abc1-4c41-8992-cf0501573364",
+      "uniqueId": "c588799c-c62b-4776-8dcc-ba5191c2b585",
       "input": [],
       "output": []
     }
