--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task23/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task23/project.json
@@ -1,12 +1,12 @@
 {
-  "name": "Task2",
-  "projectId": "eeaa54fc-3bf8-4077-90f6-8f9d522c1abd",
-  "description": "Addition of two Numbers",
+  "name": "Task23",
+  "projectId": "1b2de7ef-b415-4a54-91b0-9b86658a6936",
+  "description": "Data Manipulation: Assign set of string (eg: abcdefg), and check the (length, substring, index, Last letters and Remove)",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.System.Activities": "[23.10.1]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "323b50d9-b0df-4c6c-8e25-aaf8b06b02bf",
+      "uniqueId": "635793f4-3378-460d-89f1-bf70abcb7751",
       "input": [],
       "output": []
     }
