--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task24/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task24/project.json
@@ -1,12 +1,12 @@
 {
-  "name": "Task2",
-  "projectId": "eeaa54fc-3bf8-4077-90f6-8f9d522c1abd",
-  "description": "Addition of two Numbers",
+  "name": "Task24",
+  "projectId": "8c5521e7-9036-451f-babc-acadc572d228",
+  "description": "Assign input value (eg: UiPath Studio) , and replace the word with any other word by using Replace function",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.System.Activities": "[23.10.1]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "323b50d9-b0df-4c6c-8e25-aaf8b06b02bf",
+      "uniqueId": "50f8c2ff-c60e-46d7-81a4-32ef87e48c7f",
       "input": [],
       "output": []
     }
