--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task26/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task26/project.json
@@ -1,12 +1,12 @@
 {
-  "name": "Task2",
-  "projectId": "eeaa54fc-3bf8-4077-90f6-8f9d522c1abd",
-  "description": "Addition of two Numbers",
+  "name": "Task26",
+  "projectId": "a72f8ca0-6371-405c-afc9-7608e5329688",
+  "description": "Guess the Random Number (State Machine)",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.System.Activities": "[23.10.1]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "323b50d9-b0df-4c6c-8e25-aaf8b06b02bf",
+      "uniqueId": "da8c8f7b-cb8a-4cc6-a749-9ffcb34c1ceb",
       "input": [],
       "output": []
     }
