--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task25/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task25/project.json
@@ -1,12 +1,13 @@
 {
-  "name": "Task2",
-  "projectId": "eeaa54fc-3bf8-4077-90f6-8f9d522c1abd",
-  "description": "Addition of two Numbers",
+  "name": "Task25",
+  "projectId": "1ed46ccc-3598-4292-be56-ddf293338ade",
+  "description": "Extract the information from Youtube(Automate with Uipath Channel), TItle, view and month and print the result in excel",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.System.Activities": "[23.10.1]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "323b50d9-b0df-4c6c-8e25-aaf8b06b02bf",
+      "uniqueId": "d1b9a6e6-2a13-41d0-8bf6-89f915672d69",
       "input": [],
       "output": []
     }
