--- a/SourceCode/2023/Oct2023/Basics/SachinRawal/Task_23/project.json
+++ b/SourceCode/2023/Oct2023/Basics/SachinRawal/Task_23/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_14",
-  "projectId": "fe02ac82-8a43-4337-8370-d3f3822381ef",
-  "description": "Extracting data from Vajrang.org ",
+  "name": "Task_23",
+  "projectId": "03b7cc3f-e074-4cbb-932d-c8a8e89a41b7",
+  "description": "Data Manuplation",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "9a37190d-3389-4af3-b9eb-ee895d897e66",
+      "uniqueId": "c3ebc8d4-436b-4f39-a75e-c31ffc6f68aa",
       "input": [],
       "output": []
     }
